# dynawheel

./: README.md  pylint_dict.txt  setup.cfg
dynawheel/: __init__.py
example/add-pkgs/pkg1/: setup.py
example/add-pkgs/pkg2/: setup.py
src/: dynawheel.py
