[metadata]
name = dynawheel
version = 1.0.0
author = DynaWheel
description = DynaWheel ezr setup
long-description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/dynawheel
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers

[options]
package_dir =
    =src
py_modules = dynawheel
python_requires = >=3.0

[options.packages.find]
where=src
